chore(phase1): prepare REAL mode transition with safe key handling and retry policy

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ firebase-debug.log
 firestore-debug.log
 .vercel
 .env*.local
+
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
