--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,3 +1,6 @@
+# Smart Bid Radar - Python Backend Requirements (MVP v1.1)
+# 기본 패키지
+
 requests==2.31.0
 pandas==2.1.4
 firebase-admin==6.4.0
@@ -5,3 +8,10 @@ python-dotenv==1.0.0
 schedule==1.2.0
 beautifulsoup4==4.12.2
 lxml==5.1.0
+
+# 문서 생성 (선택사항)
+python-docx==1.1.0
+reportlab==4.0.7
+
+# AI (선택사항 - OpenAI API 사용 시)
+# openai==1.6.1
